add tags structure to index.html

--- a/index.html
+++ b/index.html
@@ -1,15 +1,36 @@
 <!doctype html>
 <html lang="fr">
 <head>
-  <meta charset="utf-8">
-  <meta name="auteur" content="Antoine Goncalves CV">
-  <title>CV Antoine Goncalves</title>
-  <link rel="icon" href="images/favicon.jpg" />
-  <!-- <link rel="stylesheet" href="style.css"> -->
+  
+	<meta charset="utf-8">
+  
+  	<meta name="auteur" content="Antoine Goncalves CV">
+  
+  	<title>CV Antoine Goncalves</title>
+  
+  	<link rel="icon" href="images/favicon.jpg" />
+
+  	<!-- <link rel="stylesheet" href="style.css"> -->
+
 </head>
+
 <body>
 	<header>Antoine Goncalves <br> Dev Web Junior</header>
+	<nav>
+		<div class="table">
+
+	</nav>
+
+	<section></section>
 	
+	<section></section>
+	
+	<section></section>
+	
+	<section></section>
+	
+	<footer></footer>
   
 </body>
+
 </html> 
