change favicon to index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   
   	<title>CV Antoine Goncalves</title>
   
-  	<link rel="icon" href="images/favicon.jpg" />
+  	<link rel="icon" href="images/Favicon.png" />
 
   	<!-- <link rel="stylesheet" href="style.css"> -->
 
