change structure of html to index.html

--- a/index.html
+++ b/index.html
@@ -46,20 +46,23 @@
 
 	</nav>
 
-	<section id="competence">
+	<section>
+
+		<article id="competences">
+
+		</article>
 	
-	</section>
-	
-	<section id="experience">
-	
-	</section>
-	
-	<section id="information">
-	
-	</section>
-	
-	<section id="contact">
-	
+		<article id="experience">
+
+		</article>
+
+		<article id="information">
+
+		</article>
+
+		<article id="contact">
+
+		</article>
 	</section>
 	
 	<footer></footer>
