add all structure of HTML , write information , add images

--- a/index.html
+++ b/index.html
@@ -15,7 +15,23 @@
 </head>
 
 <body>
-	<header>Antoine Goncalves <br> Dev Web Junior</header>
+	<header id="top">
+		<div class="left">
+		
+			<h1> <strong>Antoine Goncalves <br> Dev Web Junior</strong> </h1>
+		
+			<small> 23 ans <br> Permis B + Véhicule à disposition </small>
+
+		</div>
+
+		<div class="right">
+			
+			<img src="" alt="Photo Perso">
+	
+		</div>
+
+	</header>
+	
 	<nav>
 		<div class="menu">
 			<ul>
@@ -46,26 +62,156 @@
 
 	</nav>
 
-	<section>
+	<aside>
+		<div id="ScrollUp">
+			<a href="#top"><img src="images/ScroolUp.png"/></a>
+		</div>
+	</aside>
+	
+	<section class="contenu-cv">
 
-		<article id="competences">
+		<article id="competences" class="left">
+			
+			<h2 class="titre-article"> <strong>Compétences</strong> </h2>
+			
+			<h4 class="sous-titre-article">Compétences Techniques</h4>
+			
+			<ul>
+				<li class="mot-important">HTML</li>
+				<li class="mot-important">CSS</li>
+				<li class="mot-important">Javascript (notions de base)</li>
+				<li class="mot-important">Python (notions de base)</li>
+				<li class="mot-important">PHP (découverte)</li>
+			</ul>
 
+			<h4 class="sous-titre-article">Compétences Personelles</h4>
+		
+			<ul>
+				<li class="mot-important">Créatif</li>
+				<li class="mot-important">Travail d'équipe</li>
+				<li class="mot-important">Capacité d'adaptation</li>
+				<li class="mot-important">Organisation</li>
+				<li class="mot-important">Sourire et Tenue soignée</li>
+			
 		</article>
 	
-		<article id="experience">
+		<article id="experience" class="right">
+
+			<h2 class="titre-article"> <strong>Expériences Professionnelles</strong> </h2>
+
+			<table>
+				<caption class="sous-titre-article">Expériences Professionnelles</caption>
+
+				<thead class="entête-tableau">
+
+  					<tr>
+    						<td>Dates</td>
+    						<td>Poste</td>
+    						<td>Entreprise</td>
+    						<td>Tâches</td>
+ 					</tr>
+				</thead>
+				<tbody class="corps-tableau">
+
+  					<tr>
+						<td class="date">Décembre 2018 - Juin 2019</td>
+    						<td class="fonction">Hôte de Caisse Polyvalent</td>
+						<td class="entreprise">Auchan Englos</td>
+						<td class="tâches">Gestion du stress, Autonomie, Contact Client</td>
+ 					</tr>
+  					
+					<tr>
+						<td class="date">Septembre 2017 - Juillet 2018</td>
+    						<td class="fonction">Aide Magasinier</td>
+    						<td class="entreprise">Décathlon Lompret</td>
+  			      			<td class="tâches">Delai de livraison, Contact Client, Travail d'équipe</td>
+					</tr>
+				</tbody>
+			</table>
+
+			<table>
+                                <caption class="sous-titre-article">Formation</caption>
+
+                                <thead class="entête-tableau">
+
+                                        <tr>
+                                                <td>Date</td>
+                                                <td>Diplôme</td>
+                                                <td>École</td>
+						<td>Ville</td>
+                                        </tr>
+                                </thead>
+                                <tbody class="corps-tableau">
+
+                                        <tr>
+                                                <td class="Date">Septembre 2016 - Juin 2018</td>
+						<td class="Diplôme">Licence SESI</td>
+                                                <td class="École">Université de Lille 1</td>
+						<td class="Ville">Lille</td>
+                                        </tr>
+
+                                        <tr>
+                                                <td class="Date">Septembre 2015 - Janvier 2016</td>
+                                                <td class="Diplôme">Première Année de Médecine</td>
+						<td class="École">UFR Médecine</td>
+						<td class="Ville">Reims</td>
+                                        </tr>
+
+                                        <tr>
+                                                <td class="Date">2015</td>
+                                                <td class="Diplôme">Baccalauréat Scientifique</td>
+						<td class="École">Lycée Gaspard Monge</td>
+						<td class="Ville">Charleville-Mézières</td>
+                                        </tr>
+
+                                        <tr>
+                                           	<td class="Date">2011</td>
+                                                <td class="Diplôme">Brevet des Collèges</td>
+						<td class="École">Collège Rouget De Lisle</td>
+						<td class="Ville">Charleville-Mézières</td>
+                                        </tr>
+                                </tbody>
+                        </table>
 
 		</article>
 
-		<article id="information">
+		<article id="information" class="left">
+
+			<h2 class="titre-article"> <strong>À propos de moi</strong> </h2>
+			
+			<h4 class="sous-titre-article">Présentation</h4>
+			<p><strong>Developpeur Web Junior</strong> , voulant mettre à profit mes connaissances acquis grâce à la formation <a href="http://www.groupevitaminet.com/trouvez-futur-metier-formation-developpeur-se-web-de-yes-we-web/" target="_blank"><b>Yes We Web</b></a> malgré mon peu d'expérience. Sérieux et Motivé , faite moi confiance et vous ne le regretterez pas ! </p>
+
+			<h4 class="sous-titre-article">Hobbies</h4>
+			<ul>
+				<li>Football, pour le travail d'équipe et la cohésion de groupe</li>
+				<li>Musculation, pour le bien-être et l'hygiène de vie</li>
+				<li>Anglais, l'apprentissage de cette langue si importante</li>
+			</ul>
 
 		</article>
 
-		<article id="contact">
+		<article id="contact" class="right">
+
+			<h2 class="titre-article"> <strong>Contactez-moi</strong> </h2>
+
+			<p><img src="images/Adresse.png" alt="Adresse"> 78 rue du Docteur Calmette , Appartement 2 <br> 59120 Loos </p> <br>
+			<p><img src="images/Telephone.png" alt="Telephone"> 07.77.00.72.65 </p> <br>
+			<p><img src="images/Gmail.png" alt="Gmail"> goncalves.devweb@gmail.com </p>
 
 		</article>
 	</section>
 	
-	<footer></footer>
+	<footer>
+
+		<a href="https://twitter.com/Ant_Gonz14" target="_blank"><img src="images/Twitter.jpeg" alt="Twitter"></a>
+			
+		<a href="https://www.linkedin.com/in/antoine-goncalves-b19569190/" target="_blank"><img src="images/Linkedin.png" alt="Linkedin"></a>
+	
+		<a href="https://github.com/Antoine-Goncalves" target="_blank"><img src="images/Github.png" alt="Github"></a>
+		
+		<p> Mes liens professionelles ci-dessus </p>
+	</footer>
   
 </body>
 
