change the menu form , photo of myself, footer to index.html

--- a/index.html
+++ b/index.html
@@ -10,28 +10,21 @@
   
   	<link rel="icon" href="images/Favicon.png" />
 
-  	<!-- <link rel="stylesheet" href="style.css"> -->
+  	<link rel="stylesheet" type="text/css" href="style.css">
 
 </head>
 
 <body>
 	<header id="top">
-		<div class="left">
 		
-			<h1> <strong>Antoine Goncalves <br> Dev Web Junior</strong> </h1>
-		
-			<small> 23 ans <br> Permis B + Véhicule à disposition </small>
-
-		</div>
-
-		<div class="right">
-			
-			<img src="" alt="Photo Perso">
-	
-		</div>
+		<h1> <strong>Antoine Goncalves <br> Dev Web Junior</strong> </h1>
+		<small id="small"> 23 ans <br> Permis B + Véhicule à disposition </small>
+		<br>
+		<img id="photo-CV" src="images/Photo.webp" alt="Photo Perso"></img>
 
 	</header>
-	
+	<br>
+	<br>
 	<nav>
 		<div class="menu">
 			<ul>
