add some modification to index.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
   
   	<meta name="auteur" content="Antoine Goncalves CV">
-  
+
   	<title>CV Antoine Goncalves</title>
   
   	<link rel="icon" href="images/Favicon.png" />
@@ -23,8 +23,6 @@
 		<img id="photo-CV" src="images/Photo.webp" alt="Photo Perso"></img>
 
 	</header>
-	<br>
-	<br>
 	<nav>
 		<div class="menu">
 			<ul>
@@ -63,7 +61,7 @@
 	
 	<section class="contenu-cv">
 
-		<article id="competences" class="left">
+		<article id="competences">
 			
 			<h2 class="titre-article"> <strong>Compétences</strong> </h2>
 			
@@ -88,7 +86,7 @@
 			
 		</article>
 	
-		<article id="experience" class="right">
+		<article id="experience">
 
 			<h2 class="titre-article"> <strong>Expériences Professionnelles</strong> </h2>
 
@@ -168,7 +166,7 @@
 
 		</article>
 
-		<article id="information" class="left">
+		<article id="information">
 
 			<h2 class="titre-article"> <strong>À propos de moi</strong> </h2>
 			
@@ -184,13 +182,13 @@
 
 		</article>
 
-		<article id="contact" class="right">
+		<article id="contact">
 
 			<h2 class="titre-article"> <strong>Contactez-moi</strong> </h2>
 
-			<p><img src="images/Adresse.png" alt="Adresse"> 78 rue du Docteur Calmette , Appartement 2 <br> 59120 Loos </p> <br>
-			<p><img src="images/Telephone.png" alt="Telephone"> 07.77.00.72.65 </p> <br>
-			<p><img src="images/Gmail.png" alt="Gmail"> goncalves.devweb@gmail.com </p>
+			<p><img class="image-contact" src="images/Adresse.png" alt="Adresse"> 78 rue du Docteur Calmette , Appartement 2 <br> 59120 Loos </p> <br>
+			<p><img class="image-contact" src="images/Telephone.png" alt="Telephone"> 07.77.00.72.65 </p> <br>
+			<p><img class="image-contact" src="images/Gmail.png" alt="Gmail"> goncalves.devweb@gmail.com </p>
 
 		</article>
 	</section>
