change some thing to index.html

--- a/index.html
+++ b/index.html
@@ -16,13 +16,11 @@
 
 <body>
 	<header id="top">
-		
-		<h1> <strong>Antoine Goncalves <br> Dev Web Junior</strong> </h1>
-		<small id="small"> 23 ans <br> Permis B + Véhicule à disposition </small>
-		<br>
 		<img id="photo-CV" src="images/Photo.webp" alt="Photo Perso"></img>
-
+		<h1 class="titre1"> <strong>Antoine Goncalves <br> Dev Web Junior</strong> </h1>
+		<small id="small"> 23 ans <br> Permis B + Véhicule à disposition </small>
 	</header>
+	
 	<nav>
 		<div class="menu">
 			<ul>
@@ -85,13 +83,13 @@
 				<li class="mot-important">Sourire et Tenue soignée</li>
 			
 		</article>
-	
+
 		<article id="experience">
 
 			<h2 class="titre-article"> <strong>Expériences Professionnelles</strong> </h2>
 
 			<table>
-				<caption class="sous-titre-article">Expériences Professionnelles</caption>
+				<caption class="sous-titre-article"><h4 class="sous-titre-article">Expériences Professionnelles</h4></caption>
 
 				<thead class="entête-tableau">
 
@@ -121,7 +119,7 @@
 			</table>
 
 			<table>
-                                <caption class="sous-titre-article">Formation</caption>
+				<caption class="sous-titre-article"><h4 class="sous-titre-article">Formation</h4></caption>
 
                                 <thead class="entête-tableau">
 
@@ -171,7 +169,7 @@
 			<h2 class="titre-article"> <strong>À propos de moi</strong> </h2>
 			
 			<h4 class="sous-titre-article">Présentation</h4>
-			<p><strong>Developpeur Web Junior</strong> , voulant mettre à profit mes connaissances acquis grâce à la formation <a href="http://www.groupevitaminet.com/trouvez-futur-metier-formation-developpeur-se-web-de-yes-we-web/" target="_blank"><b>Yes We Web</b></a> malgré mon peu d'expérience. Sérieux et Motivé , faite moi confiance et vous ne le regretterez pas ! </p>
+			<p><strong>Developpeur Web Junior</strong> , voulant mettre à profit mes connaissances acquis grâce à la formation <a class="YesWeWeb" href="http://www.groupevitaminet.com/trouvez-futur-metier-formation-developpeur-se-web-de-yes-we-web/" target="_blank"><b>Yes We Web</b></a> malgré mon peu d'expérience. Sérieux et Motivé , faite moi confiance et vous ne le regretterez pas ! </p>
 
 			<h4 class="sous-titre-article">Hobbies</h4>
 			<ul>
