fault correction to index.html

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
 	<header id="top">
-		<img id="photo-CV" src="images/Photo.webp" alt="Photo Perso"></img>
+		<img id="photo-CV" src="images/Photo.webp" alt="Photo Perso"/>
 		<h1 class="titre1"> <strong>Antoine Goncalves <br> Dev Web Junior</strong> </h1>
 		<small id="small"> 23 ans <br> Permis B + Véhicule à disposition </small>
 	</header>
@@ -48,12 +48,13 @@
 
 				</li>
 			</ul>
+		</div>
 
 	</nav>
 
 	<aside>
 		<div id="ScrollUp">
-			<a href="#top"><img src="images/ScroolUp.png"/></a>
+			<a href="#top"><img src="images/ScroolUp.png" alt="ScroolUp"/></a>
 		</div>
 	</aside>
 	
@@ -81,7 +82,7 @@
 				<li class="mot-important">Capacité d'adaptation</li>
 				<li class="mot-important">Organisation</li>
 				<li class="mot-important">Sourire et Tenue soignée</li>
-			
+			</ul>
 		</article>
 
 		<article id="experience">
